# tachyon-cowork

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/ISSUE_TEMPLATE/: feedback.md
.github/workflows/: ci.yml  deploy-compute.yml  deploy-web.yml  e2e-real-api.yml  security.yml  tauri-release.yml
.serena/: project.yml
docs/: DISTRIBUTION.md  EXHIBITION_RUNBOOK_0415.md  INSTALL.md  TELEMETRY.md  business-usecases.md  exhibition-release.md  project-workspace-guide.md  real-api-integration.md  release-notes-v0.1.0.md  tauri-webdriver.md  手動動作確認ガイド.md
docs/tasks/: exhibition-0415.md
projects/_template/: README.md
sandbox-images/: Dockerfile.tachyon
scripts/: build-internal.sh
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project.rs  runtime_auth.rs
src-tauri/src/commands/: chat.rs  docx.rs  excel.rs  file_manage.rs  file_organize.rs  host_fs.rs  mod.rs  pdf.rs  pptx.rs  project.rs  sandbox.rs  system.rs
src-tauri/src/mcp/: client.rs  commands.rs  config.rs  manager.rs  mod.rs
src-tauri/src/mcp/apps/: file_manager.rs  meeting_recorder.rs  mod.rs  office_worker.rs  web_search.rs
src-tauri/src/sandbox/: executor.rs  mod.rs  workspace.rs
src-tauri/src/tools/: executor.rs  mod.rs  path_validator.rs
src/lib/: auth.ts  (+13 more)
(+62 files in other folders)
