[package]
name = "tachyon-cowork"
version = "0.1.0"
description = "Tachyon Cowork - AI Assistant Desktop App"
edition = "2021"

[lib]
name = "tachyon_cowork_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tachyon-sdk = { git = "https://github.com/quantum-box/tachyon-sdk.git", subdirectory = "rust", rev = "d360f67" }
calamine = "0.26"
rust_xlsxwriter = "0.80"
base64 = "0.22"
zip = "2"
quick-xml = "0.37"
